[gd_scene load_steps=20 format=4 uid="uid://655tb5ohksya"]

[ext_resource type="Script" uid="uid://dr44r7qduc1du" path="res://scenes/car/tuture.gd" id="1_dt5q3"]
[ext_resource type="Material" uid="uid://d3nmwq28t052x" path="res://scenes/car/materials/Sol.tres" id="1_xn6cx"]
[ext_resource type="Material" uid="uid://bew8f1y5g2es" path="res://scenes/car/materials/MurFond.tres" id="2_dt5q3"]
[ext_resource type="PackedScene" uid="uid://dxkx67y5wad5u" path="res://scenes/Button_direction/button_direction.tscn" id="3_i2jd0"]

[sub_resource type="ArrayMesh" id="ArrayMesh_j5k3t"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAAAEAAEAAgAFAAMAAgABAAUAAwAGAAAABAAAAAYABQAGAAMABwABAAQABwAFAAEABAAGAAcABQAHAAYA"),
"name": "Sol",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAD/////AAD/////AAAAAP///////wAA//8AAP//AAAAAP//AAAAAP//AAAAAAAAAAAAAP//AAAAAAAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_d1f3c"]
resource_name = "Tuture_Cube"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("GIDzvwaw+H8GsPO/GID4f/e/7e/h//H//L/0//L/8u8GsP//CIAC8Aaw8+//f///3P//j+nP/3/c//9/6c//jxzABODI/8fvDMDv7///DuD4r+p/99/0vwuwBMAK4OR/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": ExtResource("1_xn6cx"),
"name": "Sol",
"primitive": 3,
"uv_scale": Vector4(2.0021274, 2, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAD//////7//////AAD/v/////////+/AAD//wAA/78AAP//AAD/vwAAAAD///+/AAAAAAAA/78AAP//////v///AAD//xGAAAD/////EYD///////8kgAAAAAD//wCAAAAAAAAA////////AAD//wAA//8AAP////8AAAAA////////////v///AAAAAP+///8AAP///7//////AAD/v///AAAAAPv/AAAAAP//+////wAA///3/wAAAAAAAP//////f////3////9/////fwOA/P8DgPz/8n/l/yGA7v//f/9//3//f/9//3//f////3/+//9//v//f/7//3/+/zyAegA8gHoAn4BAAbF/JgD+P/v//j/7//s/9v/+P/v/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_j5k3t")

[sub_resource type="ArrayMesh" id="ArrayMesh_i7vxr"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"name": "MurFond",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ccc7j"]
resource_name = "Tuture_Cube_001"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("oapU1f9/////f1TVoar//6Gqqar/f1TV/3+qqqGqVNXz//P/DMDy3///998AwPP/Q9WpqqGqVNWhqqqqQ9VU1aGqqar/f/9/oar/f/9/qqrt/xuIFbD/f+X/+X8dsCGI"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": ExtResource("2_dt5q3"),
"name": "MurFond",
"primitive": 3,
"uv_scale": Vector4(2.0015974, 2, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAP+//////////7//////AAD/v///AAD///+///8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAABU1f//AAD//1TV//8AAAAAVNUAAAAA//9U1f////8AAELVAAD/////QtUAAP//AABC1f///////0LVVFWpqlRVqapUVamqVFWqqv+//z//v/8//7//P/8//7/1fwUA9X8FAOp/CgD/fwAA/3//f/9//3//f/9//3//f1VVVFVVVVRVVFVUVVVVVFVf1cAqX9XAKl/VwCpf1cAq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_i7vxr")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tcn38"]
points = PackedVector3Array(1, 1, 1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dm0o8"]

[sub_resource type="ArrayMesh" id="ArrayMesh_3y4x2"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_7g3a2"]
resource_name = "Tuture_Cube_002"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_dm0o8"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_3y4x2")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_b3ski"]
points = PackedVector3Array(1, 1, 1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t5v1n"]

[sub_resource type="ArrayMesh" id="ArrayMesh_io20y"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_q363s"]
resource_name = "Tuture_Cube_003"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_t5v1n"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_io20y")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_u0012"]
points = PackedVector3Array(1, 1, 1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tcn38"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dt5q3"]
size = Vector3(14.408203, 3.6959152, 9.601196)

[node name="Tuture" type="Node3D"]
script = ExtResource("1_dt5q3")

[node name="Sol" type="MeshInstance3D" parent="."]
transform = Transform3D(4.8, 0, 0, 0, 1.2, 0, 0, 0, 7.2000003, 0.09325343, -0.13500005, 0)
mesh = SubResource("ArrayMesh_d1f3c")
skeleton = NodePath("")

[node name="MurFond" type="MeshInstance3D" parent="."]
transform = Transform3D(0.24000001, 0, 0, 0, 2.4, 0, 0, 0, 7.2000003, -4.7067466, 3.4650002, 0)
mesh = SubResource("ArrayMesh_ccc7j")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="MurFond"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MurFond/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_tcn38")

[node name="StaticBody3D2" type="StaticBody3D" parent="MurFond"]
transform = Transform3D(1, 0, 0, 0, 1.0000002, 0, 0, 0, 1.0000006, 40.37221, 0, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MurFond/StaticBody3D2"]
shape = SubResource("ConvexPolygonShape3D_tcn38")

[node name="MurDerriere" type="MeshInstance3D" parent="."]
transform = Transform3D(4.291535e-08, 0, 4.8, 0, 2.4, 0, -0.24000001, 0, 8.58307e-07, 0.09325343, 3.4650002, 7.2000003)
mesh = SubResource("ArrayMesh_7g3a2")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="MurDerriere"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MurDerriere/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_b3ski")

[node name="MurDevant" type="MeshInstance3D" parent="."]
transform = Transform3D(4.291535e-08, 0, 4.8, 0, 2.4, 0, -0.24000001, 0, 8.58307e-07, 0.09325343, 3.4650002, -7.2000003)
mesh = SubResource("ArrayMesh_q363s")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="MurDevant"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MurDevant/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_u0012")

[node name="top_car" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.79321766, 0.6584039, -8)

[node name="CSGBox3D" type="CSGBox3D" parent="top_car"]
material_override = SubResource("StandardMaterial3D_tcn38")

[node name="ButtonDirection_RotTop" parent="." instance=ExtResource("3_i2jd0")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7932177, 0.6584039, -5)
collision_layer = 3
collision_mask = 2

[node name="ButtonDirection2_RotBottom" parent="." instance=ExtResource("3_i2jd0")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2067823, 0.6584039, -5)
collision_layer = 3
collision_mask = 2
currentCarAction = 1

[node name="GroundPlayer" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroundPlayer"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -0.75408936, -1.0511398, 0.020263672)
shape = SubResource("BoxShape3D_dt5q3")
debug_color = Color(0.60562444, 0.92013264, 1.2283505, 1)
